# noise-relation-analyze

./: .gitignore  README.md  pyproject.toml
configs/: pipeline.template.toml
docs/: 2026-03-28-project-status-and-plan.md
docs/superpowers/specs/: 2026-03-28-foldable-noise-analysis-design.md
examples/demo_pipeline/: audio_asset.csv  dimensions.csv  labels.csv
examples/single_type_pipeline/: audio_asset.csv  dimensions.csv  labels.csv  phone_master.csv
examples/synthetic_demo/: audio_asset.csv  dimensions.csv  labels.csv  phone_master.csv
examples/type1_pipeline/: audio_asset.csv  dimensions.csv  labels.csv
src/: cv2.py
src/noise_relation_analyze/: __init__.py  audio.py  cli.py  factor_analysis.py  features.py  pipeline.py  registry.py  reporting.py  scoring.py  severity.py  synthetic_data.py
src/noise_relation_analyze.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_audio_waveform.py  test_binary_single_type_pipeline.py  test_cli.py  test_demo_pipeline.py  test_extract_features_pipeline.py  test_factor_analysis.py  test_factor_analysis_upgraded.py  test_feature_aggregation.py  test_html_report.py  test_join_validation.py  test_pipeline_commands.py  test_prepare_factor_data.py  test_reliable_features_and_model.py  test_report_generation.py  test_scoring_pipeline.py  test_segmentation.py  test_single_type_severity_pipeline.py  test_synthetic_data.py  test_synthetic_end_to_end.py  test_true_shap_report.py
